--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,9 @@ dependencies:
   google_sign_in: ^4.2.0
   flutter_slidable: ^0.5.7
   shimmer: ^1.1.1
+  flappy_search_bar: ^1.7.2
+  async: ^2.2.0
+  flutter_staggered_grid_view: ^0.3.0
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
