--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,11 @@ dependencies:
   flappy_search_bar: ^1.7.2
   async: ^2.2.0
   flutter_staggered_grid_view: ^0.3.0
+  responsive_builder: ^0.2.0+2
+  
+  marquee: ^1.5.2
+  camera: ^0.5.8+2
+  carousel_slider: ^2.2.1
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
