--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,6 +47,8 @@ dependencies:
   marquee: ^1.5.2
   camera: ^0.5.8+2
   carousel_slider: ^2.2.1
+  image_picker: ^0.6.7+12
+  image_cropper: 1.0.2
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
@@ -69,6 +71,7 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
+    - assets/camera.png
     - assets/images/
     - assets/icons/
     - assets/videos/
